--- a/theme.scss
+++ b/theme.scss
@@ -210,7 +210,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.page-type-donation {
+.page-type-donation-v2 {
   .header-container{
     background-color: white;
   }
