--- a/_staged-donations.scss
+++ b/_staged-donations.scss
@@ -13,11 +13,11 @@
   .bar-goal{
     color: $blue;
   }
-  .form-progress-indicator {
+  /*.form-progress-indicator {
     width: 130%;
     left: -15%;
     position: relative;
-  }
+  }*/
   .progress-indicator-stages {
     list-style-type: none;
     padding: 0 0 15px 0;
