--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -7,17 +7,28 @@
     .width-container {
         margin: 0px;
         width: 100%;
+    }
+    .v2-word-content{
         padding: 20px;
+        padding-bottom: 0px;
     }
     .row-fluid .span6{
         width: 100%;
     }
+    .stage-label{
+        color: #000;
+    }
 }
 
-@media(min-width: 540px) {
+@media(min-width: 666px) {
     .page-type-donation-v2 {
        .width-container{
-           max-width: 350px;
+           max-width: 400px;
+           margin-left: 10%;
+       }
+       .headline{
+        font-size: 40px;
+        line-height: 50px;
        }
     }
 }
@@ -53,7 +64,7 @@
         -ms-flex-pack: justify;
         justify-content: space-between;
         span {
-            width: 33.11%;
+            width: 29.11%;
         }
         label.radio {
             width: 100%;
