uddated working desktop and tablet

--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -35,11 +35,7 @@
         color: #000;
         font-size: 17px;
     }
-}
-
-@media(min-width: 450px) {
-    .page-type-donation-v2 {
-        .email-phone-v2,
+    .email-phone-v2,
         .city-province-postal-v2,
         .first-last-v2 {
             display: -webkit-box;
@@ -50,17 +46,20 @@
             justify-content: space-between;
             -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+            &::before, &::after{
+                display: none;
+            }
         }
         .email-phone-v2, .first-last-v2{
             .span6{
                 width: 48%;
             }
         }
-        .city-province-postal-v2 span6{
+        .city-province-postal-v2 .span4{
             width: 31.3%;
         }
-    }
 }
+
 
 @media(min-width: 666px) {
     .page-type-donation-v2 {
@@ -149,5 +148,7 @@
                 display: none;
             }
         }
+    }.page-type-donation-v2 .page-pages-show-donation-v2-wide .radio-inline label.radio{
+        width: auto;
     }
 }
