updating width of buttons

--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -149,6 +149,6 @@
             }
         }
     }.page-type-donation-v2 .page-pages-show-donation-v2-wide .radio-inline label.radio{
-        width: auto;
+        width: 100%;
     }
 }
