--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -1,4 +1,8 @@
 .page-type-donation-v2 {
+    .page-header .width-container, 
+    .intro.donation{
+        border: none;
+    }
     background: none;
     .header-container,
     footer {
