--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -3,13 +3,12 @@
     .intro.donation {
         border: none;
     }
-    .intro {
-        padding: 18px 0px;
-        p {
-            margin: 0px;
-        }
+    .v2-word-content.intro {
+            padding: 18px 0px;
+            p {
+                margin: 0px;
+            }
     }
-    background: none;
     .header-container,
     footer {
         display: none;
@@ -76,9 +75,13 @@
     .page-type-donation-v2 {
         .v2-word-content {
             background-color: white;
-            margin-bottom: -16px;
+            margin-bottom: -43px;
             border-top-right-radius: 10px;
             border-top-left-radius: 10px;
+            .intro{
+                padding: 18px 2px;
+                padding-bottom: 35px;
+            }
         }
         .page-pages-show-donation-v2-wide .radio-inline label.radio {
             width: 100% !important;
