--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -4,10 +4,10 @@
         border: none;
     }
     .v2-word-content.intro {
-            padding: 18px 0px;
-            p {
-                margin: 0px;
-            }
+        padding: 18px 0px;
+        p {
+            margin: 0px;
+        }
     }
     .header-container,
     footer {
@@ -69,6 +69,41 @@
     .city-province-postal-v2 .span4 {
         width: 31.3%;
     }
+    .cc-expire-label{
+        margin: 0px;
+    }
+    .cc-expire-selection {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        #donation_card_expires_on_1i, #donation_card_expires_on_2i {
+            width: 48%;
+        }
+        .cc-expire{
+            width: 100%;
+        }
+    }
+    .donate-rules, .donate-rules-header{
+        color: #000;
+    }
+    .donation-rules-header{
+        font-family: "Roboto",sans-serif;
+        font-weight: 500;
+    }
+    .donate-rules{
+        margin: 0px;
+    }
+    .cc-confirm-true{
+        margin-bottom: 27px;
+    }
+    .cc-confirm-submit-container{
+        margin-top: 17px;
+    }
 }
 
 @media(min-width: 666px) {
@@ -78,7 +113,7 @@
             margin-bottom: -43px;
             border-top-right-radius: 10px;
             border-top-left-radius: 10px;
-            .intro{
+            .intro {
                 padding: 18px 2px;
                 padding-bottom: 35px;
             }
