--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -69,7 +69,7 @@
     .city-province-postal-v2 .span4 {
         width: 31.3%;
     }
-    .cc-expire-label{
+    .cc-expire-label {
         margin: 0px;
     }
     .cc-expire-selection {
@@ -81,28 +81,49 @@
         -webkit-box-pack: justify;
         -ms-flex-pack: justify;
         justify-content: space-between;
-        #donation_card_expires_on_1i, #donation_card_expires_on_2i {
+        #donation_card_expires_on_1i,
+        #donation_card_expires_on_2i {
             width: 48%;
+            margin-top: 0px;
         }
-        .cc-expire{
+        .cc-expire {
             width: 100%;
         }
     }
-    .donate-rules, .donate-rules-header{
+    .donate-rules,
+    .donate-rules-header {
         color: #000;
     }
-    .donation-rules-header{
-        font-family: "Roboto",sans-serif;
-        font-weight: 500;
+    .donate-rules-header,
+    .confirm-amount-label {
+        font-size: 17px;
+        font-weight: bold;
     }
-    .donate-rules{
+    .donate-rules {
         margin: 0px;
+        text-align: left;
+        font-size: 14px;
+        line-height: 23px;
     }
-    .cc-confirm-true{
+    .cc-confirm-true {
         margin-bottom: 27px;
     }
-    .cc-confirm-submit-container{
+    .cc-confirm-submit-container {
         margin-top: 17px;
+    }
+    .form-errors{
+        margin-bottom: 0px;
+    }
+    #errorExplanation{
+     padding: 20px; 
+     text-align: center;  
+     h2{
+        font-size: 18px;
+        color: white;
+     }
+     ul, li{
+         padding: 0px;
+     }
     }
 }
 
@@ -133,6 +154,17 @@
         .headline {
             font-size: 40px;
             line-height: 50px;
+        }
+        .cc-expire-selection {
+            #donation_card_expires_on_1i{
+                width: 26%;
+            }
+            #donation_card_expires_on_2i{
+                width: 34%;
+            }
+            .cc-expire{
+                width: 33%;
+            }
         }
     }
 }
