--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -117,13 +117,18 @@
     #errorExplanation{
      padding: 20px; 
      text-align: center;  
+     margin: 0px;
      h2{
         font-size: 18px;
         color: white;
      }
      ul, li{
          padding: 0px;
+         font-size: 15px;
      }
+    }
+    .confirm-number{
+        margin-left: -6px;
     }
 }
 
@@ -134,8 +139,11 @@
             margin-bottom: -43px;
             border-top-right-radius: 10px;
             border-top-left-radius: 10px;
+            .headline{
+                margin-left: 11px;
+            }
             .intro {
-                padding: 18px 2px;
+                margin: 18px 14px;
                 padding-bottom: 35px;
             }
         }
