--- a/_custom-donation-v2.scss
+++ b/_custom-donation-v2.scss
@@ -145,6 +145,14 @@
             opacity: 0.7;
         }
     }
+    .card-error{
+        color: red;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    .ElementsApp .InputElement{
+        font-family: Roboto !important;
+    }
 }
 
 @media(min-width: 666px) {
@@ -211,7 +219,7 @@
         width: 100%;
         margin: 0px;
     }
-    #intro {
+    .donation {
         font-size: 30px;
         line-height: 40px;
         color: #009cfb;
